CHANGES.txt - 2011-03-15
------------------------

CHANGES IN CUPS V1.5b1

	- Added support for the cupsSingleFile PPD keyword.
	- Dropped support for the printer-state-history attribute (STR #3654)
	- Added support for a new cupsIPPSupplies keyword in PPD files to allow
	  drivers to disable IPP supply level reporting.
	- Added support for a new cupsFilter2 keyword in PPD files to allow for
	  the propagation of the actual MIME media type produced by a filter.
	- The scheduler did not always get the correct Kerberos username when
	  authenticating (STR #3670)
	- Added new cupsRasterOpenIO function and CUPS_RASTER_WRITE_PWG to the
	  CUPS imaging library to support printing to IPP Everywhere raster
	  printers.
	- The scheduler now provides default values for the pages-per-minute and
	  pages-per-minute-color attributes for PPD files that lack a
	  Throughput keyword.
	- Email notifications did not work on Mac OS X.
	- The cupstestppd program now shows an error for files missing a
	  CloseGroup keyword (STR #3668)
	- Name resolution errors no longer cause queues to stop (STR #3719,
	  STR #3753)
	- Added a new cups-exec helper program that applies security profiles
	  to filters, port monitors, backends, CGI programs, and mini-daemons.
	- The web interface can now be disabled using the WebInterface directive
	  in cupsd.conf (STR #2625)
	- The scheduler now provides privacy controls for jobs and subscriptions
	  (STR #2969)
	- Added new cupsArrayNew3 API which offers memory management of array
	  elements.
	- Added several new color spaces to the CUPS raster format (STR #3419)
	- The Validate-Job operation now uses the same policy as Print-Job by
	  default.
	- CUPS now uses iconv to implement all of its character encoding
	  support (STR #3097)
	- The scheduler now implements the Cancel-Jobs, Cancel-My-Jobs, and
	  Close-Job operations along with the job-ids operation attribute from
	  PWG 5100.11.